[package]
name = "listup_jorei"
version = "0.1.0"
edition = "2021"
description = "条例を<https://jorei.slis.doshisha.ac.jp/>をもとにリストアップするスクリプト"
authors = ["Naoki Kaneko <puripuri2100@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/japanese-law-analysis/listup_jorei"
rust-version = "1.70.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
regex = "1.10.3"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = "0.1.15"
tracing = "0.1.40"
jplaw_io = { git = "https://github.com/japanese-law-analysis/jplaw_tools.git", rev = "0c06bad" }
jplaw_data_types = { git = "https://github.com/japanese-law-analysis/jplaw_tools.git", rev = "0c06bad" }
chrono = { version = "0.4.38", features = ["serde"] }
